; ModuleID = '/home/carl/AnghaBench/lede/package/kernel/lantiq/ltq-deu/src/extr_ifxmips_des.c_des_setkey.c'
source_filename = "/home/carl/AnghaBench/lede/package/kernel/lantiq/ltq-deu/src/extr_ifxmips_des.c_des_setkey.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.crypto_tfm = type { i32 }
%struct.des_ctx = type { i32, i64, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @des_setkey(%struct.crypto_tfm* %0, i32* %1, i32 %2) #0 {
  %4 = alloca %struct.crypto_tfm*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.des_ctx*, align 8
  store %struct.crypto_tfm* %0, %struct.crypto_tfm** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load %struct.crypto_tfm*, %struct.crypto_tfm** %4, align 8
  %9 = call %struct.des_ctx* @crypto_tfm_ctx(%struct.crypto_tfm* %8)
  store %struct.des_ctx* %9, %struct.des_ctx** %7, align 8
  %10 = load %struct.des_ctx*, %struct.des_ctx** %7, align 8
  %11 = getelementptr inbounds %struct.des_ctx, %struct.des_ctx* %10, i32 0, i32 2
  store i64 0, i64* %11, align 8
  %12 = load i32, i32* %6, align 4
  %13 = load %struct.des_ctx*, %struct.des_ctx** %7, align 8
  %14 = getelementptr inbounds %struct.des_ctx, %struct.des_ctx* %13, i32 0, i32 0
  store i32 %12, i32* %14, align 8
  %15 = load %struct.des_ctx*, %struct.des_ctx** %7, align 8
  %16 = getelementptr inbounds %struct.des_ctx, %struct.des_ctx* %15, i32 0, i32 1
  %17 = load i64, i64* %16, align 8
  %18 = inttoptr i64 %17 to i32*
  %19 = load i32*, i32** %5, align 8
  %20 = load i32, i32* %6, align 4
  %21 = call i32 @memcpy(i32* %18, i32* %19, i32 %20)
  ret i32 0
}

declare dso_local %struct.des_ctx* @crypto_tfm_ctx(%struct.crypto_tfm*) #1

declare dso_local i32 @memcpy(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
